# marquise

./: .gitignore  .travis.yml  Makefile  README.md  RELEASE.md  marquise.cabal  stack.yaml
debian/: changelog  control  copyright  haskell-marquise-utils.install  libghc-marquise-doc.links  rules
lib/Marquise/: Classes.hs  Client.hs  Server.hs  Types.hs
lib/Marquise/Client/: Core.hs
lib/Marquise/IO/: Connection.hs  Contents.hs  Reader.hs  SpoolFile.hs  Util.hs  Writer.hs
pkg/centos/: marquised.spec
pkg/debian/: changelog  control  rules  watch
src/: DataProgram.hs  MarquiseD.hs  MarquiseDaemon.hs
tests/: Client.hs  Spool.hs  Store.hs
