cabal-version:       >= 1.10
name:                marquise
version:             2.2.1
synopsis:            Client library for Vaultaire
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Custom

source-repository    head
  type:              git
  location:          git@github.com:anchor/marquise.git


library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Marquise.Client,
                     Marquise.Classes,
                     Marquise.Types,
                     Marquise.Server,
                     Marquise.IO.Util

  other-modules:     Marquise.IO,
                     Marquise.IO.FFI,
                     Marquise.IO.Writer,
                     Marquise.IO.Reader,
                     Marquise.IO.Contents,
                     Marquise.IO.SpoolFile,
                     Marquise.IO.Connection

  build-depends:     base >=3 && <5,
                     bytestring >= 0.10.2, 
                     text,
                     containers,
                     unordered-containers,
                     attoparsec,
                     mtl,
                     unix,
                     pipes,
                     pipes-group,
                     pipes-bytestring,
                     pipes-attoparsec,
                     siphash,
                     async,
                     hslogger,
                     hashable,
                     packer,
                     filepath,
                     directory,
                     semigroups,
                     cryptohash,
                     zeromq4-haskell,
                     vaultaire-common >= 2.1.0
                                        

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto


executable marquised
  hs-source-dirs:    src
  main-is:           MarquiseDaemon.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     hslogger,
                     optparse-applicative,
                     unix,
                     vaultaire-common >= 2.1.0,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable data
  hs-source-dirs:    src
  main-is:           DataProgram.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     hslogger,
                     optparse-applicative,
                     unix,
                     pipes,
                     vaultaire-common >= 2.1.0,
                     time,
                     old-locale,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           client-test
  hs-source-dirs:    tests
  main-is:           Client.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     bytestring,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
