cabal-version:       >= 1.10
name:                marquise
version:             3.2.1
synopsis:            Client library for Vaultaire
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Custom

source-repository    head
  type:              git
  location:          git@github.com:anchor/marquise.git


library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Marquise.Client,
                     Marquise.Classes,
                     Marquise.Types,
                     Marquise.Server

  other-modules:     Marquise.IO,
                     Marquise.IO.FFI,
                     Marquise.IO.Writer,
                     Marquise.IO.Reader,
                     Marquise.IO.Contents,
                     Marquise.IO.SpoolFile,
                     Marquise.IO.Connection,
                     Marquise.Client.Core

  build-depends:     base >=3 && <5,
                     mtl,
                     transformers,
                     monad-logger,
                     fast-logger,
                     either,
                     errors,
                     transformers-base,
                     monad-control,
                     mmorph,
                     lifted-async,
                     containers,
                     unordered-containers,
                     bytestring >= 0.10.2,
                     text,
                     attoparsec,
                     unix,
                     pipes,
                     pipes-group,
                     pipes-bytestring,
                     pipes-attoparsec >= 0.5,
                     siphash,
                     async,
                     hslogger,
                     hashable,
                     binary,
                     packer,
                     filepath,
                     directory,
                     semigroups,
                     cryptohash,
                     zeromq4-haskell,
                     time,
                     vaultaire-common >= 2.6.0

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto


executable marquised
  hs-source-dirs:    src
  main-is:           MarquiseDaemon.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     hslogger,
                     optparse-applicative >= 0.11.0,
                     unix,
                     async,
                     containers,
                     vaultaire-common >= 2.5.0,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable data
  hs-source-dirs:    src
  main-is:           DataProgram.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     hslogger,
                     optparse-applicative >= 0.11.0,
                     unix,
                     pipes,
                     text,
                     attoparsec,
                     unordered-containers,
                     vaultaire-common >= 2.5.0,
                     time,
                     old-locale,
                     data-binary-ieee754,
                     packer,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           spool-test
  hs-source-dirs:    tests
  main-is:           Spool.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     bytestring,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           client-test
  hs-source-dirs:    tests
  main-is:           Client.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     mtl,
                     transformers,
                     containers,
                     lens,
                     hspec,
                     bytestring,
                     pipes,
                     vaultaire-common,
                     marquise

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
